# build-with-ai-2025-2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
build_with_ai/: app.py  client.py  server.py
build_with_ai/db/: models.py  products.json  seed.py  session.py  utils.py
build_with_ai/templates/: index.html
